src/objects/tmTrialManagerTemplateProduct__c.object
<CustomObject>
    <fields>
        <fullName>EligibleForTrial__c</fullName>
        <formula>TEXT(Product__r.Eligible_for_Trial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible for Trial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Eligible_for_Trial__c</field>
                <operation>equals</operation>
                <value>yes, demo</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipName>TFR_Template_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TFR_Template__c</fullName>
        <label>TFR Template</label>
        <referenceTo>tmTrialManagerTemplate__c</referenceTo>
        <relationshipName>TFR_Template_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Trial Manager Template Product</label>
    <nameField>
        <displayFormat>TFRP{000000000}</displayFormat>
        <label>Trial Manager Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Manager Template Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>